# MonobankSpendingsTrackerAPI

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/mainapp/: models.py  serializers.py  urls.py  views.py
backend/mainapp/management/commands/: wait_for_db.py
