[project]
name = "monobankspendingtrackerapi"
version = "0.1.0"
description = "API that serves as a tracker for spending money for Monobank users."
authors = [
    {name = "Vic K.",email = "kondratskayavictoria@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "=3.12"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-configurations (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
